# Simple-Video-Writter

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  conanfile.py
.github/workflows/: cmake.yml
include/simulator/: vedeowriter.h  vedeowriterAPI.h
src/: vedeowriter.cpp  vedeowriterAPI.cpp
test/: main.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
